--- a/src/App.css
+++ b/src/App.css
@@ -1,190 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap");
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Comfortaa", Arial, Helvetica, sans-serif;
-}
-
-.app {
-  text-align: center;
-  min-height: 100vh;
-  background: #dcdcdc;
-  padding: 100px 50px;
-}
-
-.error {
-  display: inline-block;
-  text-align: center;
-  margin: 30px;
-  background: rgb(221, 85, 70);
-  color: rgb(247, 232, 230);
-  padding: 20px 30px;
-  border-radius: 5px;
-  text-decoration: none;
-  transition: 0.3s ease all;
-}
-
-.error:hover {
-  background: rgb(235, 95, 79);
-  box-shadow: 3px 3px 0 rgb(141, 38, 26);
-}
-
-h1 {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: #bbb;
-}
-
-form {
-  margin-bottom: 50px;
-}
-
-input[type="text"] {
-  min-width: 400px;
-  border-radius: 50px;
-  padding: 15px 20px;
-  border: 1px solid #fff;
-  outline: none;
-  margin-right: 12px;
-  font-size: 18px;
-  transition: 0.3s ease border-color;
-}
-
-input[type="text"]:active,
-input[type="text"]:focus {
-  border-color: #999;
-}
-
-button {
-  padding: 15px 20px;
-  border-radius: 50px;
-  border: none;
-  background: #222;
-  color: #bbb;
-  font-size: 18px;
-  cursor: pointer;
-  transition: 0.3s ease all;
-}
-
-button:hover {
-  background: #111;
-  color: #eee;
-}
-
-/* .image-grid {
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(50px, 200px);
-}
-
-.image {
-  background: #fff;
-  padding: 3px;
-  border-radius: 3px;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-  0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) transform;
-} */
-
-.image:hover {
-  background: #111;
-  transform: translateY(-2px);
-  box-shadow: 2px 5px 5px 1px #888888;
-}
-
-/* .image img {
-  display: flex;
-  width: 100%;
-  height: 100%;
+.ant-card-cover img {
+  max-height: 200px;
   object-fit: cover;
-} */
-
-/* .image:nth-child(5n) {
-  grid-column-end: span 2;
-} */
-
-/* @media screen and (max-width: 900px) {
-  .image:nth-child(3n) {
-    grid-column-end: span 3;
-  }
-} */
-
-/* @media screen and (min-width: 800px) {
-  body {
-    background-color: lavender;
-  }
-} */
-
-/* + + + + + + + + + + + + + + + + */
-/* img {
-  max-width: 100%;
-  display: block;
 }
-
-.image {
-  margin: 0;
-  display: grid;
-  grid-template-rows: 1fr;
-  margin-bottom: 5px;
-  break-inside: avoid;
-}
-
-.image img {
-  grid-row: 1 / -1;
-  grid-column: 1;
-} */
-/* 
-.iamge-grid {
-  align-content: end;
-  column-count: 3;
-  column-gap: 15px;
-}
-
-.image {
-  display: inline-block;
-  width: 100%;
-} */
-img {
-  max-width: 100%;
-  display: block;
-}
-
-.image {
-  width: 100%;
-  margin: 0;
-  display: grid;
-  grid-template-rows: 1fr;
-  margin-bottom: 5px;
-  break-inside: avoid;
-}
-
-.image-grid {
-  align-items: center;
-  justify-items: center;
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: repeat(auto-fill, minmax(250px, auto));
-  /* grid-auto-rows: minmax(50px, 200px); */
-  column-count: 3;
-  column-gap: 5px;
-}
-
-/* @media screen and (min-width: 800px) {
-  .image-grid {
-    column-count: 4;
-    column-gap: 5px;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .image-grid {
-    column-count: 5;
-    column-gap: 5px;
-  }
-} */
